samples/_failures_safe/1761224164_7a9865_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cd70edc.c: In function ‘main’:
./samples/SAFE/__tmp_0cd70edc.c:152:13: error: expected declaration or statement at end of input
  152 |             if (!read_matrix(&mat2)) {
      |             ^~
./samples/SAFE/__tmp_0cd70edc.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cd70edc.c:152:13: error: expected declaration or statement at end of input
